# agentic-lint

./: .agentic-lint.yml  .bully.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: agentic-lint-evaluator.md  bully-evaluator.md  bully-scheduler.md
bench/: README.md  grader_prompt.md  quality_prompt.md  run_skill_evals.py
docs/: design.md  idea-doc-agent-policy-plane.md  plan.md  rule-authoring.md  rule-config.md  telemetry.md
examples/: laravel-package.yml
examples/packs/: django.yml  fastapi.yml  go.yml  nextjs.yml  rails.yml  react-ts.yml  rust-cli.yml
examples/rules/: react-ts.yml
hooks/: hooks.json
pipeline/: analyzer.py  bench.py  hook.sh  pipeline.py  rule_runner.py
pipeline/tests/: test_analyzer.py  test_analyzer_semantic.py  test_baseline.py  test_bench.py  test_cant_match_filters.py  test_capabilities.py  test_cli.py  test_config_extends.py  test_coverage.py  test_debt.py  test_diff_context.py  test_doctor.py  test_executor.py  test_explain.py  test_guide_explain.py  test_hook_shell.py  test_log_verdict.py  test_manual_cli.py  test_output_adapters.py  test_output_mode_config.py  test_parser.py  test_parser_continuation.py  test_parser_hardening.py  test_parser_properties.py  test_per_line_disables.py  test_pipeline.py  test_rule_runner.py  test_scope_absolute_path_regression.py  test_session_start.py  test_short_circuit.py  test_skip_config.py  test_stderr_format.py  test_stop_session_rules.py  test_strict_flag.py  test_telemetry.py  (+3 more)
scripts/: dogfood.sh  lint.sh
(+44 files in other folders)
